# fold-wrappers

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: flake8.yaml  isort.yaml  publish.yaml  test-arch.yaml  test-baselines.yaml  test-lightgbm  test-neuralprophet.yaml  test-prophet.yaml  test-sktime.yaml  test-statsforecast.yaml  test-statsmodels.yaml  test-xgboost.yaml  test_neuralforecast.yaml
docs/: index.md
examples/: Wrapping StatForecast.py  statsforecast.py
src/drift_models/: __init__.py  ar.py  statsforecast.py  statsforecast_univariate.py
src/fold_models/: __init__.py  ar.py  base.py  baseline.py  convenience.py  neuralforecast.py  neuralprophet.py  prophet.py  river.py  sktime.py  statsforecast.py  statsmodels.py  xgboost.py
src/fold_wrapper/: __init__.py  convenience.py  lightgbm.py  neuralforecast.py
src/fold_wrappers/: arch.py  lightgbm.py  neuralforecast.py  prophet.py  sktime.py  statsforecast.py  statsmodels.py  xgboost.py
tests/: test_arch.py  test_baselines.py  test_lgbm.py  test_lightgbm.py  test_neuralforecast.py  test_neuralprophet.py  test_prophet.py  test_sktime.py  test_statsforecast.py  test_statsmodels.py  test_xgboost.py  utils.py
