[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "fold-models"
version = "0.0.1"
authors = [
  { name="Mark Aron Szulyovszky", email="mark@dreamfaster.ai" },
  { name="Daniel Szemerey", email="daniel@dreamfaster.ai" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "fold @ https://github.com/dream-faster/fold/archive/main.zip",
]
description = "Model wrappers for fold."
keywords = []
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Documentation = "https://dream-faster.github.io/fold-models"
Issues = "https://github.com/dream-faster/fold-models/issues"
Source = "https://github.com/dream-faster/fold-models"

[project.optional-dependencies]
quality = [
  "black~=22.10.0",
  "flake8~=4.0.1",
  "isort~=5.10.1",
  "pre-commit~=2.20.0",
]
tests = [
  "pytest~=7.1.2",
  "fold @ https://github.com/dream-faster/fold/archive/main.zip",
]
docs = [
  "mkdocs-material",
  "mkdocstrings-python",
  "mkdocs-include-markdown-plugin",
  "mkdocs-autorefs"
]

sktime = [
  "sktime>=0.16.0",
  "pmdarima>=2.0.0"
]
statsforecast = [
  "statsforecast>=1.5"
]
statsmodels = [
  "statsmodels>=0.12.0"
]
xgboost = [
  "xgboost"
]
prophet = [
  "prophet"
]
neuralforecast = [
  "neuralforecast>=1.4",
  pytorch-lightning>=1.9.0,<2.0.0
]


[tool.hatch.envs.quality]
dependencies = [
  "fold-models[quality]",
]
detached = true

[tool.hatch.envs.quality.scripts]
check = [
  "flake8 src tests",
  "black --check --diff --preview src tests",
  "isort --check-only --diff src tests",
]
format = [
  "isort src tests",
  "black --preview src tests",
  "check",
]

[tool.hatch.envs.test]
dependencies = ["fold-models[tests]"]

[tool.hatch.envs.test.scripts]
run = "pytest tests/ --durations 0 -s"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.isort]
profile = "black"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/.devcontainer",
  "/.pre-commit-config.yaml",
  "/.gitignore",
  "/tests",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]
